substrate/frame/support/test/tests/pallet_ui/mod_not_inlined.stderr
error[E0658]: non-inline modules in proc macro input are unstable
  --> tests/pallet_ui/mod_not_inlined.rs:19:1
   |
19 | mod foo;
   | ^^^^^^^^
   |
   = note: see issue #54727 <https://github.com/rust-lang/rust/issues/54727> for more information

error: Invalid pallet definition, expected mod to be inlined.
  --> tests/pallet_ui/mod_not_inlined.rs:19:1
   |
19 | mod foo;
   | ^^^
